<?xml version="1.0"?>
<package format="3">
  <name>serial_comm</name>
  <version>1.0.0</version>
  <description>A high-performance serial communication library based on boost::asio</description>

  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>Boost</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
