<?xml version="1.0"?>
<package format="3">
  <name>uart_to_stm32</name>
  <version>0.1.0</version>
  <description>ROS 2 port of the uart_to_stm32 serial bridge.</description>

  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>serial_comm</depend>

  <build_depend>Eigen3</build_depend>
  <build_export_depend>Eigen3</build_export_depend>
  <exec_depend>Eigen3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
